attempting to fix some ts errors and changed background color to avoid contrast w/ logo

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background-color: #f78378
+  background-color: #f98171
 }
 
 .header-container {
